2013-05-13  Paul Smith  <psmith@gnu.org>

	* filedef.h (struct file): Add a builtin flag.
	* file.c (enter_file): Unset the builtin flag.
	(rehash_file): Ditto.
	(print_file): Don't print builtin files if we've omitted them.
	* default.c (undefine_default_variables): New function: go through
	the default variables and undefine them.
	(set_default_suffixes): Mark these suffix rules as builtin.
	* makeint.h: Prototype.
	* main.c (main): Handle addition of -r and -R to MAKEFLAGS in the
	makefile.  Fixes Savannah bug #20501.

	* main.c (define_makeflags): Assign o_env_override level to
	MAKEFLAGS to ensure it's set even in the presence of -e.
	Fixes Savannah bug #2216.

	* makeint.h (TRACE_NONE, TRACE_RULE, TRACE_DIRECTORY): Define
	constants for the trace mode.
	* main.c: Add new --trace mode parsing.
	(decode_trace_flags): New function.
	(decode_switches): Call it.
	(define_makeflags): Fix a bug with long-name options.
	* misc.c (fatal): Remove special output-sync handling.
	* make.1: Document new --trace mode flags.
	* doc/make.texi (Options Summary): Ditto.

2013-05-11  Eli Zaretskii  <eliz@gnu.org>

	* job.c (child_out): Output the newline following the message
	before fllush-ing the stream.  Avoids displaying the following
	failure message, which goes to stderr, on the same line.

2013-05-06  Eli Zaretskii  <eliz@gnu.org>

	* gnumake.h (GMK_EXPORT) [_WIN32]: Move the dllexport declaration
	here from makeint.h.

	* makeint.h (GMK_BUILDING_MAKE) [WINDOWS32]: Define before
	including gnumake.h.

	* doc/make.texi (Loaded Object Example): Add a note about building
	shared objects on MS-Windows.

2013-05-05  Paul Smith  <psmith@gnu.org>

	* makeint.h (OUTPUT_SYNC_LINE, OUTPUT_SYNC_RECURSE): Rename
	output-sync options "job" to "line" and "make" to "recurse".
	* main.c (decode_output_sync_flags): Ditto.
	* job.c (reap_children): Ditto.
	(start_job_command): Ditto.
	* make.1: Ditto.
	* doc/make.texi (Parallel Output): Ditto.
